# body-building

./: .body-building.code-workspace  .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/body-building/: main_handle.cpp  main_handle.h
include/body-building/body-building-mode/: AssistanceMode.cpp  AssistanceMode.h  BurnOutMode.cpp  BurnOutMode.h  CentrifugalMode.cpp  CentrifugalMode.h  CentripetalMode.cpp  CentripetalMode.h  ConstantSpeedMode.cpp  ConstantSpeedMode.h  IntelligentMode.cpp  IntelligentMode.h  SpringMode.cpp  SpringMode.h  StandardMode.cpp  StandardMode.h
include/body-building/detector/: PullTimesDetector.cpp  PullTimesDetector.h
include/body-building/io/: Cmd.cpp  Cmd.h  Option.cpp  Option.h  Servo.cpp  Servo.h  lua_api.cpp  lua_api.h
include/body-building/other-mode/: AdditionMode.cpp  AdditionMode.h  CalibrateZeroPointMode.cpp  CalibrateZeroPointMode.h  StallProtectionMode.cpp  StallProtectionMode.h
include/body-building/progress/: FanControler.cpp  FanControler.h  FrictionTorqueCalculater.cpp  FrictionTorqueCalculater.h  GraduallyDisableEnableServo.cpp  GraduallyDisableEnableServo.h  ModeSelector.cpp  ModeSelector.h  P_PI_Switch.cpp  P_PI_Switch.h  SleepControler.cpp  SleepControler.h
